# claw-code

./: .gitignore  DESIGN_REFERENCE.md  FRONTEND_REDESIGN.md  QUICKSTART.md  README_NORG_DESKTOP.md  REWRITE_COMPLETION.md  TAURI_MIGRATION_COMPLETE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/: App.tsx  index.css
app/components/: Chat.tsx  ImportBundle.tsx  MessageBubble.tsx  Settings.tsx  ToolPanel.tsx  WorkspaceSetup.tsx  WorkspaceSidebar.tsx
app/hooks/: useChat.ts  useMcp.ts  useWorkspaces.ts
app/types/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  engine.rs  lib.rs  llm.rs  main.rs  mcp_client.rs  workspace.rs
