[package]
name = "norg-desktop"
version = "0.1.0"
description = "Multi-workspace AI chat client for Norg"
authors = ["YOTTA DIGITAL"]
license = "MIT"
repository = "https://github.com/yottadigital/norg-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
futures = "0.3"
eventsource-stream = "0.2"
async-trait = "0.1"
zip = "2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
